tests/lime/pass/bugs/args/call_macro.wsa
    push 1
    call macro hello [push 2] .hello
    hello
.hello:
