tests/lime/fail/tokens/macro_rest/byte_59.wsa
macro m; [push 59] m;
